--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
         <!-- Iced Latte -->
         <div class="col-md-4">
           <div class="card shadow-sm h-100">
-            <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092" class="card-img-top" alt="Iced Latte">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/27/Iced_Coffee_Cream_Latte_-_CK_Bistro_2024-06-23.jpg" class="card-img-top" alt="Iced Latte">
             <div class="card-body">
               <h5 class="card-title">Iced Vanilla Latte</h5>
               <p class="card-text">Smooth espresso poured over ice with milk and a hint of vanilla.</p>
@@ -54,7 +54,7 @@
         <!-- Croissant -->
         <div class="col-md-4">
           <div class="card shadow-sm h-100">
-            <img src="https://images.unsplash.com/photo-1584270354949-1ebd1d9ed6f6" class="card-img-top" alt="Croissant">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/28/2018_01_Croissant_IMG_0685.JPG" class="card-img-top" alt="Croissant">
             <div class="card-body">
               <h5 class="card-title">Butter Croissant</h5>
               <p class="card-text">Flaky, golden layers of pure buttery goodness from our in-house bakery.</p>
@@ -65,7 +65,7 @@
         <!-- Avocado Toast -->
         <div class="col-md-4">
           <div class="card shadow-sm h-100">
-            <img src="https://images.unsplash.com/photo-1551218808-94e220e084d2" class="card-img-top" alt="Avocado Toast">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Avocado_on_Toast_-_Cadence_Clubhouse%2C_Newhaven_Fort_2025-05-06.jpg" class="card-img-top" alt="Avocado Toast">
             <div class="card-body">
               <h5 class="card-title">Avocado Toast</h5>
               <p class="card-text">Sourdough topped with smashed avocado, chili flakes & feta.</p>
@@ -76,7 +76,7 @@
         <!-- Brownie -->
         <div class="col-md-4">
           <div class="card shadow-sm h-100">
-            <img src="https://images.unsplash.com/photo-1625919135662-2c6bb06da58b" class="card-img-top" alt="Brownie">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Brownie_IMG_001.jpg" class="card-img-top" alt="Brownie">
             <div class="card-body">
               <h5 class="card-title">Fudge Brownie</h5>
               <p class="card-text">Decadent chocolate brownie with a soft center and crispy top.</p>
@@ -87,7 +87,7 @@
         <!-- Cold Brew -->
         <div class="col-md-4">
           <div class="card shadow-sm h-100">
-            <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93" class="card-img-top" alt="Cold Brew">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Cold_brew_with_whipped_cream.jpg" class="card-img-top" alt="Cold Brew">
             <div class="card-body">
               <h5 class="card-title">Cold Brew</h5>
               <p class="card-text">Slow-steeped cold brew for a smooth and bold caffeine kick.</p>
