--- a/testimonials.html
+++ b/testimonials.html
@@ -35,7 +35,7 @@
             <div class="card-body">
               <p class="card-text">"Absolutely love the ambiance. The coffee is top-notch and the croissants are a must-try!"</p>
               <div class="d-flex align-items-center mt-4">
-                <img src="https://randomuser.me/api/portraits/women/44.jpg" class="rounded-circle me-3" width="50" height="50" alt="Aarushi">
+                <img src="https://cdn.pixabay.com/photo/2022/01/23/08/27/fashion-model-6960099_1280.jpg" class="rounded-circle me-3" width="50" height="50" alt="Aarushi">
                 <div>
                   <h6 class="mb-0 fw-bold">Aarushi Mehta</h6>
                   <small class="text-muted">Local Guide</small>
@@ -50,7 +50,7 @@
             <div class="card-body">
               <p class="card-text">"Their cold brew is easily the best in Noida. Great spot to read or work from."</p>
               <div class="d-flex align-items-center mt-4">
-                <img src="https://randomuser.me/api/portraits/men/31.jpg" class="rounded-circle me-3" width="50" height="50" alt="Rohit">
+                <img src="https://cdn.pixabay.com/photo/2022/03/11/06/14/indian-man-7061278_1280.jpg" class="rounded-circle me-3" width="50" height="50" alt="Rohit">
                 <div>
                   <h6 class="mb-0 fw-bold">Rohit Verma</h6>
                   <small class="text-muted">Freelancer</small>
@@ -65,7 +65,7 @@
             <div class="card-body">
               <p class="card-text">"Urban Brew Café has such a warm vibe. The avocado toast and brownie combo is divine."</p>
               <div class="d-flex align-items-center mt-4">
-                <img src="https://randomuser.me/api/portraits/women/65.jpg" class="rounded-circle me-3" width="50" height="50" alt="Simran">
+                <img src="https://img.freepik.com/free-photo/beautiful-woman-purple-sweater-skirt_1303-17488.jpg?t=st=1746618185~exp=1746621785~hmac=5d1c268e3186a2a05555937a964016126c775c1374643b63727ba0a2864177fa&w=826" class="rounded-circle me-3" width="50" height="50" alt="Simran">
                 <div>
                   <h6 class="mb-0 fw-bold">Simran Khanna</h6>
                   <small class="text-muted">Marketing Manager</small>
