--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       <h1 class="text-center mb-4 fw-bold">Our Story</h1>
       <div class="row align-items-center">
         <div class="col-md-6 mb-4 mb-md-0">
-          <img src="https://images.unsplash.com/photo-1507914372368-bf1eacef09b9" alt="Founders" class="img-fluid rounded shadow" />
+          <img src="https://img.freepik.com/free-photo/front-view-indian-friends-posing-studio_23-2150692731.jpg?t=st=1746618912~exp=1746622512~hmac=63c433c2e3b2b12326f0c610ab0ac3730c8a921577d8beafd7ad7f60ac1023d5&w=2000" alt="Founders" class="img-fluid rounded shadow" />
         </div>
         <div class="col-md-6">
           <p>Founded in 2022 by college friends Aarav Mehta and Priya Kapoor, Urban Brew Café was born out of a shared love for coffee and creativity. Our goal was simple: build a space that feels like home—with the aroma of fresh brews, cozy couches, and great conversations.</p>
